--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.0.0",
+    "react-icons": "^4.2.0",
     "react-query": "^3.13.3",
     "react-select": "^4.3.0",
     "styled-components": "^5.2.3",
