--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
     "ts-node": "^9.1.1",
-    "typescript": "4.0"
+    "typescript": "^4.0"
   },
   "license": "MIT"
 }
