--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.0.0",
     "react-icons": "^4.2.0",
     "react-query": "^3.13.3",
+    "react-query-devtools": "^3.0.0-beta.1",
     "react-select": "^4.3.0",
     "react-tooltip": "^4.2.17",
     "styled-components": "^5.2.3",
